# qsp-designer-demo

./: .gitignore  README.md  designer_export_example.ipynb  example_notebook.ipynb  pyproject.toml
data/: README.md  vpop.csv  vpop_converted.csv
data/outputs/ResultsFolder_05Aug2024_11.49.13/: QSPSimulationInfo.txt  QSPStates.csv
models/: README.md  __init__.py
models/2compartment/: 2_compartment_.txt
models/qspAppliedBioMathDSL_05_Aug_2024_10.51.32/: one_compartment.txt  one_compartment_Dosing.csv
models/qspAppliedBioMathDSL_06_Aug_2024_13.31.34/: one_compartment.txt  one_compartment_Dosing.csv  one_compartment_VPop.csv
parameters/: README.md
utilities/: README.md  project_utilities.py
workspaces/: one_compartment.qsp
